[project]
name = "leo_guessr"
version = "1.0.0"
description = "LEO guessr game"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "skyfield",
    "pytest",
    "mayavi",
    "PyQt5"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"